--- a/src/app/_directives/ticket-table.html
+++ b/src/app/_directives/ticket-table.html
@@ -31,7 +31,7 @@
                             <tbody>
                             <tr ng-repeat="ticketMusic in ticketsList | filter: {type: 'music'} | orderBy:sortingField:desc"
                                 ng-click="excerpt = !excerpt;">
-                                <td><a href="{{ticketMusic.auctionUrl}}">{{ticketMusic.title}}</a></td>
+                                <td><a target="_blank" href="{{ticketMusic.auctionUrl}}">{{ticketMusic.title}}</a></td>
                                 <td ng-if="!excerpt">{{ticketMusic.description | limitTo : 250 : 0}}...</td>
                                 <td ng-if="excerpt">{{ticketMusic.description}}</td>
                                 <td>{{ticketMusic.price}}</td>
@@ -67,7 +67,7 @@
                             <tbody>
                             <tr ng-repeat="ticketSport in ticketsList | filter: {type: 'sport'} | orderBy:sortingSportField:sportDesc"
                                 ng-click="excerptSport = !excerptSport; ">
-                                <td><a href="{{ticketSport.auctionUrl}}">{{ticketSport.title}}</a></td>
+                                <td><a target="_blank" href="{{ticketSport.auctionUrl}}">{{ticketSport.title}}</a></td>
                                 <td ng-if="!excerptSport; ">{{ticketSport.description  | limitTo : 250 : 0}}...</td>
                                 <td ng-if="excerptSport">{{ticketSport.description}}</td>
                                 <td>{{ticketSport.price}}</td>
